clarify reasoning language
Co-authored-by: Andrew Block <andy.block@gmail.com>
Signed-off-by: Scott Rigby <scott@r6by.com>

--- a/hips/hip-9999.md
+++ b/hips/hip-9999.md
@@ -43,7 +43,7 @@ The recurring user expectation is clear: `.helmignore` should work like `.gitign
 
 ### Why .gitignore Parity?
 
-1. **Reduced cognitive load**: Developers already know `.gitignore` semantics. Aligning `.helmignore` eliminates a class of surprises.
+1. **Reduced cognitive load**: Developers already know `.gitignore` semantics. Aligning `.helmignore` enables existing knowledge and patterns to be reused with Helm.
 
 2. **Well-documented spec**: Git's ignore format is [thoroughly documented][git-gitignore] and battle-tested across millions of repositories.
 
