fix: fixed the hip number and responded to reviews
Signed-off-by: Andrew Shoell <mrlunchbox777@gmail.com>

--- a/hips/hip-0027.md
+++ b/hips/hip-0027.md
@@ -1,6 +1,6 @@
 ---
-hip: 0027
-title: "Expose Previously Installed Chart Metadata During Template Rendering"
+hip: 9999
+title: "Expose Release History During Template Rendering"
 authors: ["Andrew Shoell <mrlunchbox777@gmail.com>"]
 created: "2025-11-12"
 type: "feature"
@@ -9,9 +9,9 @@ status: "draft"
 
 ## Abstract
 
-This HIP proposes exposing metadata from currently deployed chart versions during template rendering. Currently, Helm templates have access to `.Chart` for the chart being installed but no equivalent access to deployed releases. This forces chart authors to use complex workarounds like post-renderers, pre-upgrade hooks, or manual values conventions to implement version-aware upgrade logic.
+This HIP proposes exposing release history metadata during template rendering. Currently, Helm templates have access to `.Chart` for the chart being installed but no equivalent access to deployed release history. This forces chart authors to use complex workarounds like post-renderers, pre-upgrade hooks, or manual values conventions to implement version-aware upgrade logic.
 
-The proposal introduces `.DeployedChart` (singular, latest deployed) and `.DeployedCharts` (array, multiple versions) objects available in all template contexts, populated during `helm upgrade` and `helm rollback` operations. The `--deployed-depth` flag controls how many deployed versions to retrieve (default: 1), with `--deployed-depth 0` disabling the feature.
+The proposal introduces `.Release.History` (array of historical releases) available in template contexts, populated during `helm upgrade` and `helm rollback` operations. The `--release-history-depth` flag controls how many historical releases to retrieve (default: 0), requiring explicit opt-in. The `.Release.HistoryDepth` field exposes the requested depth value to enable chart authors to require minimum depth for safe upgrades.
 
 ## Motivation
 
@@ -38,59 +38,102 @@ Post-rendering solutions violate Helm's design philosophy that template renderin
 
 ## Rationale
 
-### Naming: `.DeployedChart` and `.DeployedCharts`
+### Naming: `.Release.History`
 
-`.DeployedChart` (singular) provides ergonomic access to the most recent deployed version. `.DeployedCharts` (array) provides access to historical deployed versions in reverse chronological order (index 0 is most recent). `.DeployedChart` is syntactic sugar for `.DeployedCharts[0]`.
+`.Release.History` extends the existing `.Release` built-in object with a history array, making it immediately intuitive and discoverable for Helm users. This follows the established pattern of `.Release.Name`, `.Release.Namespace`, `.Release.Revision`, etc., and feels like a natural part of Helm's API.
+
+The history array is ordered in reverse chronological order (index 0 is most recent deployed release). This provides ergonomic access to the most recent release while enabling multi-version migrations when needed.
 
 Alternatives considered and rejected:
 
 - `.PreviousChart` - Ambiguous during rollbacks
+- `.DeployedChart`/`.DeployedCharts` - Less discoverable, doesn't extend existing objects
 - `.InstalledChart` - Confusing with current installation
 - `.CurrentChart` - Ambiguous which is "current"
 - `.Release.Deployed.Chart` - Unnecessarily nested
 
-### Always Available as Template Objects
+### Always Available as Template Object
 
-`.DeployedChart` (nil or chart metadata) and `.DeployedCharts` (empty array or populated) are always present to ensure consistent template behavior, prevent undefined variable errors, and enable testing with `helm template`.
+`.Release.History` (empty array or populated) and `.Release.HistoryDepth` (integer) are always present to ensure consistent template behavior, prevent undefined variable errors, and enable testing with `helm template`.
 
 ### Populated Only During Upgrades/Rollbacks
 
-`.DeployedChart`/`.DeployedCharts` contain chart metadata only during `helm upgrade` and `helm rollback` when deployed releases exist. During rollback, they reflect the currently deployed version (being rolled back _from_). They're nil/empty for:
+`.Release.History` contains release metadata only during `helm upgrade` and `helm rollback` when deployed releases exist and `--release-history-depth` is greater than 0. During rollback, the history reflects releases deployed before the rollback target. It's empty for:
 
 - `helm install` - No deployed release
 - `helm template` / dry-runs - No cluster context
-- When `--deployed-depth 0` is used
+- When `--release-history-depth 0` is used (default)
 
-### Chart Metadata Only
+### Filtered Release Data
 
-This proposal exposes only Chart.yaml metadata (same structure as `.Chart`), not values, manifests, or release metadata. This maintains security (values may contain secrets), performance (manifests can be large), and simplicity while solving 90% of use cases. Future HIPs could extend this if needed.
+This proposal exposes a filtered subset of release data to balance utility with performance and security:
+
+**Included by default:**
+- Chart metadata (Name, Version, AppVersion, and other Chart.yaml fields)
+- Release metadata (Name, Namespace, Revision, Status)
+- Timestamps (FirstDeployed, LastDeployed)
+
+**Excluded by default:**
+- Values (may contain secrets)
+- Manifests (can be very large)
+- Templates (can be very large)
+- Hooks (implementation detail)
+
+Future enhancements could allow users to control filtering via additional flags, but this default filter serves the primary use cases while maintaining security and performance.
 
 ### Depth Control Flag
 
-The `--deployed-depth` flag controls how many deployed chart versions to retrieve (default: 1). Setting `--deployed-depth 0` disables the feature for security or determinism requirements. Higher depths may impact performance and should only be used for specific multi-version migration scenarios.
+The `--release-history-depth` flag controls how many historical releases to retrieve (default: 0, requiring explicit opt-in). This conservative default protects users from accidental performance impact. Setting `--release-history-depth 0` explicitly disables the feature (though this is already the default). Higher depths may impact performance and should only be used for specific multi-version migration scenarios.
+
+### Exposing Requested Depth
+
+`.Release.HistoryDepth` exposes the value of `--release-history-depth` to chart templates, enabling a "negotiation" between user and chart author. Chart authors can require a minimum depth for safe migrations and provide helpful error messages, but this doesn't force the condition—users must explicitly opt in with the appropriate flag.
+
+**Example:**
+```yaml
+{{- if lt .Release.HistoryDepth 3 }}
+  {{- fail "This chart requires --release-history-depth=3 for safe upgrades from v2.x" }}
+{{- end }}
+```
+
+This field is always available (similar to `.Release.Revision`) and contains the integer value passed to `--release-history-depth` (0 by default).
 
 ### Design Decisions
 
-- **Different Chart Names:** Still populates `.DeployedChart` even if chart names differ—templates can detect and handle this
+- **Different Chart Names:** Still populates `.Release.History` even if chart names differ—templates can detect and handle this
 - **Helm's Record:** Reflects Helm's stored release record, not actual cluster state (use `lookup()` for that)
-- **Dry-Run/Template:** Always nil to maintain cluster-agnostic, deterministic behavior
+- **Dry-Run/Template:** Always empty array to maintain cluster-agnostic, deterministic behavior
+- **Opt-In by Default:** Default depth of 0 requires explicit user choice, preventing accidental performance impact
 
 ## Specification
 
 ### New Template Objects
 
-**`.DeployedChart`**: Singular object containing the most recent deployed chart metadata (nil if none exists). Syntactic sugar for `.DeployedCharts[0]`.
+**`.Release.History`**: Array of release objects in reverse chronological order (most recent first). Empty array if no deployed releases exist or `--release-history-depth 0` is used.
 
-**`.DeployedCharts`**: Array of deployed chart metadata objects in reverse chronological order (most recent first). Empty array if no deployed releases exist.
+**`.Release.HistoryDepth`**: Integer value indicating the requested depth via `--release-history-depth` flag. Always available, defaults to 0.
 
-**Metadata Structure:** Each chart object is identical to `.Chart`, including `Name`, `Version`, `AppVersion`, and other [Chart.yaml fields](https://helm.sh/docs/topics/charts/#the-chartyaml-file).
+**Release Object Structure:** Each release object contains:
+
+```go
+type HistoricalRelease struct {
+    Name         string    // Release name
+    Namespace    string    // Release namespace  
+    Revision     int       // Revision number
+    Status       string    // Release status (deployed, superseded, failed, etc.)
+    Chart        Chart     // Chart metadata (same structure as .Chart)
+    FirstDeployed time.Time // When this release was first deployed
+    LastDeployed  time.Time // When this release was last deployed
+}
+```
 
 **Usage Examples:**
 
 ```yaml
-# Simple case: check latest deployed version
-{{- if .DeployedChart }}
-{{- if and (semverCompare ">=2.0.0" .Chart.Version) (semverCompare "<2.0.0" .DeployedChart.Version) }}
+# Check if upgrading from a version that needs migration
+{{- if gt (len .Release.History) 0 }}
+{{- $lastRelease := index .Release.History 0 }}
+{{- if and (semverCompare ">=2.0.0" .Chart.Version) (semverCompare "<2.0.0" $lastRelease.Chart.Version) }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -107,12 +150,23 @@ spec:
 {{- end }}
 {{- end }}
 
-# Multi-version migration: handle complex upgrade paths
-{{- if gt (len .DeployedCharts) 0 }}
-{{- range .DeployedCharts }}
-{{- if semverCompare "<1.5.0" .Version }}
-# Run migration for versions before 1.5.0
+# Require minimum depth for safe upgrades
+{{- if lt .Release.HistoryDepth 3 }}
+  {{- fail "This chart requires --release-history-depth=3 for safe upgrades from v2.x" }}
 {{- end }}
+
+# Multi-version migration: handle complex upgrade paths
+{{- range .Release.History }}
+{{- if and (eq .Status "deployed") (semverCompare "<1.5.0" .Chart.Version) }}
+# Run migration for successfully deployed versions before 1.5.0
+{{- end }}
+{{- end }}
+
+# Check if last deployment was successful
+{{- if gt (len .Release.History) 0 }}
+{{- $lastRelease := index .Release.History 0 }}
+{{- if ne $lastRelease.Status "deployed" }}
+  {{- fail (printf "Previous release was %s - manual intervention required" $lastRelease.Status) }}
 {{- end }}
 {{- end }}
 ```
@@ -120,53 +174,65 @@ spec:
 ### Command-Line Flag
 
 ```bash
-# Default: retrieve latest deployed chart
+# Default: no history retrieved (depth 0)
 helm upgrade myrelease mychart
 
-# Retrieve last 3 deployed versions
-helm upgrade myrelease mychart --deployed-depth 3
+# Retrieve latest deployed release
+helm upgrade myrelease mychart --release-history-depth 1
 
-# Disable feature
-helm upgrade myrelease mychart --deployed-depth 0
+# Retrieve last 3 releases
+helm upgrade myrelease mychart --release-history-depth 3
+
+# Explicitly disable (same as default)
+helm upgrade myrelease mychart --release-history-depth 0
 ```
 
 ### Behavior Matrix
 
-| Operation                  | `.DeployedChart` / `.DeployedCharts`                            |
-| -------------------------- | --------------------------------------------------------------- |
-| `helm install`             | `nil` / `[]` (no deployed release)                              |
-| `helm upgrade` (new)       | `nil` / `[]` (no deployed release)                              |
-| `helm upgrade` (existing)  | Populated with deployed metadata (most recent first)            |
-| `helm rollback`            | Populated with currently deployed version (rolling back _from_) |
-| `helm template` / dry-runs | `nil` / `[]` (no cluster context)                               |
-| `--deployed-depth 0`       | `nil` / `[]` (explicitly disabled)                              |
-| `--deployed-depth N`       | Up to N most recent deployed versions                           |
+| Operation                           | `.Release.History` | `.Release.HistoryDepth` |
+| ----------------------------------- | ------------------ | ----------------------- |
+| `helm install`                      | `[]`               | 0 (default)             |
+| `helm upgrade` (new)                | `[]`               | 0 (default)             |
+| `helm upgrade` (default)            | `[]`               | 0                       |
+| `helm upgrade --release-history-depth 1` (existing) | Populated with 1 release | 1       |
+| `helm upgrade --release-history-depth N` (existing) | Up to N releases | N           |
+| `helm rollback --release-history-depth N`           | Populated with releases before target | N |
+| `helm template` / dry-runs          | `[]`               | 0                       |
 
 ## Backwards Compatibility
 
-Fully backwards compatible. The `.DeployedChart` and `.DeployedCharts` objects are purely additive—existing charts work unchanged. Go templates handle nil and empty arrays safely; the recommended `{{ if .DeployedChart }}` pattern works in all scenarios.
+Fully backwards compatible. The `.Release.History` and `.Release.HistoryDepth` fields are purely additive—existing charts work unchanged. Go templates handle empty arrays and integer values safely; the recommended `{{ if gt (len .Release.History) 0 }}` pattern works in all scenarios. Default depth of 0 means existing behavior is unchanged unless users explicitly opt in.
 
 ## Security Implications
 
-**Not Exposed:** Previous values (may contain secrets) or previous manifest (may contain sensitive data). Only Chart.yaml metadata is exposed.
+**Not Exposed:** Previous values (may contain secrets) or previous manifests (may contain sensitive data). Only filtered release metadata is exposed (chart metadata, release status, timestamps, revision numbers).
 
-**Considerations:** Chart authors should not store sensitive data in Chart.yaml. The `--deployed-depth 0` flag provides opt-out for security-sensitive environments. Higher depth values increase data exposure; use the minimum required.
+**Considerations:** Chart authors should not store sensitive data in Chart.yaml. The default `--release-history-depth 0` provides opt-out by default. Higher depth values increase data exposure; use the minimum required. Release status and metadata are already stored in cluster secrets by Helm, so this doesn't expose data that isn't already persisted.
 
 ## How to Teach This
 
 ### Documentation Additions
 
-1. **Template Objects Reference:** Add `.DeployedChart` and `.DeployedCharts` to built-in objects with availability details
-2. **Upgrade Guide:** "Implementing Version-Aware Upgrades" covering nil/empty checks, version comparisons, and best practices
+1. **Template Objects Reference:** Add `.Release.History` and `.Release.HistoryDepth` to built-in objects documentation with availability details
+2. **Upgrade Guide:** "Implementing Version-Aware Upgrades" covering empty array checks, version comparisons, status checking, and best practices
 3. **Migration Examples:** Show replacement of post-renderers and pre-upgrade hooks
-4. **Performance Note:** Document that `--deployed-depth` should be kept minimal; default of 1 is recommended
-5. **Chart Linting:** Update `helm lint` to warn on usage without nil/empty checks
+4. **Performance Note:** Document that `--release-history-depth` should be kept minimal; opt-in by default protects users
+5. **Chart Linting:** Update `helm lint` to warn on usage without empty array checks or when using `.Release.History` without checking `.Release.HistoryDepth`
 
 ### Key Example Pattern
 
 ```yaml
-{{- if and .DeployedChart (semverCompare "<3.0.0" .DeployedChart.Version) }}
+# Always check length before accessing
+{{- if gt (len .Release.History) 0 }}
+{{- $lastRelease := index .Release.History 0 }}
+{{- if semverCompare "<3.0.0" $lastRelease.Chart.Version }}
 # Handle breaking change from versions < 3.0.0
+{{- end }}
+{{- end }}
+
+# Enforce minimum depth requirement
+{{- if and (gt (len .Release.History) 0) (lt .Release.HistoryDepth 2) }}
+  {{- fail "This upgrade path requires --release-history-depth=2" }}
 {{- end }}
 ```
 
@@ -174,21 +240,26 @@ Fully backwards compatible. The `.DeployedChart` and `.DeployedCharts` objects a
 
 A future pull request will:
 
-1. Extend template rendering context to include `.DeployedChart` and `.DeployedCharts`
-2. Populate from release records during upgrade/rollback (reverse chronological order)
-3. Add `--deployed-depth` flag (default: 1)
-4. Implement `.DeployedChart` as alias to `.DeployedCharts[0]`
-5. Include comprehensive unit and integration tests covering depth behavior
+1. Extend template rendering context to include `.Release.History` and `.Release.HistoryDepth`
+2. Populate `.Release.History` from release records during upgrade/rollback (reverse chronological order)
+3. Add `--release-history-depth` flag (default: 0)
+4. Filter release objects to include: Chart, Name, Namespace, Revision, Status, FirstDeployed, LastDeployed
+5. Set `.Release.HistoryDepth` to the flag value in all contexts
+6. Include comprehensive unit and integration tests covering depth behavior, filtering, and edge cases
 
 ## Rejected Ideas
 
-- **Full Release Object:** Security/performance concerns; chart metadata sufficient
+- **Full Release Object:** Security/performance concerns; filtered release metadata sufficient
+- **Chart Metadata Only:** Missing release status/revision limits utility for migration logic
 - **Only Version Strings:** Inconsistent with `.Chart`; prevents access to other metadata
+- **`.DeployedChart`/`.DeployedCharts` Naming:** Less discoverable than extending `.Release` object
+- **Default Depth of 1:** Opt-in by default (depth 0) is more conservative and safer
 - **Environment Variable Control:** Less explicit than CLI flag
 - **Cluster Query During `helm template`:** Violates cluster-agnostic design principle
 - **Mutable Objects:** Violates read-only template model; no clear use case
-- **Separate `--disable-deployed-chart` Flag:** Unified `--deployed-depth` with 0 value is cleaner
+- **Separate `--disable-release-history` Flag:** Unified `--release-history-depth` with 0 value is cleaner
 - **Unlimited History:** Performance implications; requiring explicit depth prevents accidental overhead
+- **Including Values/Manifests:** Security and performance concerns outweigh limited utility
 
 ## References
 
