Clarify behavior scope, open questions, and documentation via this HIP
Signed-off-by: Scott Rigby <scott@r6by.com>

--- a/hips/hip-9999.md
+++ b/hips/hip-9999.md
@@ -24,9 +24,7 @@ Users familiar with `.gitignore` expect the same behavior from `.helmignore`. Th
 
 3. **Unexpected first-match behavior**: Git uses "last matching rule wins"; Helm stops at the first match. This breaks patterns that progressively refine what to exclude.
 
-4. **Scope confusion**: Users expect `.helmignore` to only affect `helm package`, but it affects all commands including `template`, `install`, and `upgrade` ([#6075], [helm-www#1171]).
-
-5. **Documentation gaps**: Current docs don't clearly explain limitations or differences from `.gitignore` ([#4638], [helm-www#1312]).
+4. **Documentation gaps**: Current docs don't clearly explain limitations or differences from `.gitignore` ([#4638], [helm-www#1312]). Users expect `.helmignore` to only affect `helm package`, but it affects all commands including `template`, `install`, and `upgrade` ([#6075], [helm-www#1171]).
 
 ### Evidence of User Pain
 
@@ -188,6 +186,8 @@ None. This change only affects which local files are considered during chart ope
    - Recursive globs (`**/test/`)
    - Last-match ordering
 
+5. **Improve v2 and v3 documentation**: Existing `.helmignore` documentation is insufficient, leading to end user confusion, so this should be documented as well.
+
 ### Release Notes
 
 - Highlight UX improvement for users expecting `.gitignore` behavior
@@ -269,11 +269,7 @@ Rejected because it would break existing charts that depend on current (albeit b
 
 ## Open Issues
 
-1. **Self-exclusion default**: Should `.helmignore` be automatically excluded in v3? (Currently requires explicit entry per [#9436])
-
-2. **Global ignore file**: Users have requested `~/.helmignore` support ([#1674], [#5675]). This is out of scope for this HIP but could be addressed separately.
-
-3. **Scope refinement**: Should `.helmignore` have different behavior for `helm package` vs. other commands? ([#6075], [#3050]). Out of scope for this HIP.
+None.
 
 ## References
 
@@ -302,7 +298,7 @@ These issues concern _when_ `.helmignore` applies, not pattern syntax. Included 
 - [#6075][#6075] — Users expected ignore to affect only `helm package`, but it affects all commands. This is intentional; HIP clarifies but doesn't change this.
 - [#3050][#3050] — Files in `.helmignore` are inaccessible to `.Files.Get`. Architectural issue about ignore scope, not pattern matching.
 - [#10764][#10764] — README files consume release storage; users want "exclude from release but include in package." Requires new scope distinction.
-- [#9436][#9436] — `.helmignore` doesn't exclude itself from packages. Listed as open question for Charts v3.
+- [#9436][#9436] — `.helmignore` doesn't exclude itself from packages. This is intentional becuase `.helmignore` is used for more than packaging, so various workflows could be disrupted (see https://github.com/helm/helm/issues/9436#issuecomment-792795063). Documentation update via this HIP should clarify this.
 
 ### Feature Requests (Out of Scope)
 
