--- a/hips/hip-9999.md
+++ b/hips/hip-9999.md
@@ -24,7 +24,7 @@ Users familiar with `.gitignore` expect the same behavior from `.helmignore`. Th
 
 3. **Unexpected first-match behavior**: Git uses "last matching rule wins"; Helm stops at the first match. This breaks patterns that progressively refine what to exclude.
 
-4. **Documentation gaps**: Current docs don't clearly explain limitations or differences from `.gitignore` ([#4638], [helm-www#1312]). Users expect `.helmignore` to only affect `helm package`, but it affects all commands including `template`, `install`, and `upgrade` ([#6075], [helm-www#1171]).
+4. **Documentation gaps**: Current docs don't clearly explain limitations or differences from `.gitignore` ([#4638], [helm-www#1312]).
 
 ### Evidence of User Pain
 
@@ -32,7 +32,6 @@ A comprehensive search of helm/helm issues reveals **27 directly related issues*
 
 - **Pattern matching logic**: [#8688], [#3622], [#1776], [#12592]
 - **Scope/behavior confusion**: [#6075], [#3050], [#10764]
-- **Feature requests for global ignore**: [#1674], [#5675]
 - **Documentation issues**: [#4638], [helm-www#1171], [helm-www#1312], [helm-www#1460]
 
 The recurring user expectation is clear: `.helmignore` should work like `.gitignore`.
@@ -57,30 +56,21 @@ Per [HIP-0020][hip-0020], Charts v3 provides a clean opt-in boundary for breakin
 
 3. **Independent evolution**: Chart changes are decoupled from Helm version, allowing adequate time for testing and adoption.
 
-This is the appropriate scope because changing `.helmignore` semantics would break charts that depend on current (albeit buggy) behavior.
+This is the appropriate scope because changing `.helmignore` semantics would break charts that depend on current (albeit surprising) behavior.
 
 ## Specification
 
 ### Behavioral Parity with .gitignore
 
-Charts v3 `.helmignore` files SHALL support the full `.gitignore` pattern format as documented at [git-scm.com/docs/gitignore][git-gitignore]:
+Charts v3 `.helmignore` files should support the full `.gitignore` pattern format as documented at [git-scm.com/docs/gitignore][git-gitignore].
 
-#### Pattern Types
+#### Design Intent
 
-| Pattern     | Behavior                                         |
-| ----------- | ------------------------------------------------ |
-| Blank lines | Ignored (separators for readability)             |
-| `# comment` | Lines starting with `#` are comments             |
-| `\#`        | Escaped `#` matches literal `#` filename         |
-| `!pattern`  | Negation—re-includes previously excluded matches |
-| `/pattern`  | Leading `/` anchors pattern to chart root        |
-| `pattern/`  | Trailing `/` matches directories only            |
-| `*`         | Matches anything except `/`                      |
-| `?`         | Matches any single character except `/`          |
-| `[a-z]`     | Character class matching                         |
-| `**`        | Recursive glob (see below)                       |
-| `\ `        | Escaped trailing space (preserved)               |
-| `\!`        | Escaped `!` matches literal `!` filename         |
+`.helmignore` is intended to follow Git's `.gitignore` file pattern matching semantics as documented at the time of this HIP's acceptance. These semantics have been intentionally stable for many years, and familiarity with them is a primary goal of this proposal.
+
+If Helm's `.helmignore` behavior diverges from Git's documented `.gitignore` behavior, that divergence should be treated as a bug and corrected—unless the divergence is explicitly documented in this proposal (see Scope Clarification).
+
+**Future Git changes**: If Git were to introduce incompatible changes to `.gitignore` matching semantics in the future, Helm would evaluate and explicitly decide whether to adopt those changes. Helm does not implicitly inherit future Git behavior changes.
 
 #### Recursive Glob Semantics (`**`)
 
@@ -93,7 +83,7 @@ Charts v3 `.helmignore` files SHALL support the full `.gitignore` pattern format
 **Last matching rule wins**. All rules are evaluated; the final matching rule determines whether a path is included or excluded. This enables patterns like:
 
 ```
-# Exclude everything
+# Exclude all top-level entries (files and directories)
 /*
 
 # But include these
@@ -111,6 +101,12 @@ Charts v3 `.helmignore` files SHALL support the full `.gitignore` pattern format
 
 Helm has no concept of staging or committing files. This proposal addresses **file targeting syntax and semantics only**—specifically, which files are included/excluded during chart operations. Git's behavior around staged/committed files does not apply.
 
+#### File Location
+
+Charts v3 `.helmignore` is loaded from the chart root directory only. Unlike `.gitignore`, which supports recursive ignore files in subdirectories within a repository, Helm loads `.helmignore` only from the chart root. Patterns in the root `.helmignore` apply to the entire chart tree.
+
+Recursive `.helmignore` loading within a chart (matching Git's nested `.gitignore` behavior) is a potential future enhancement but is out of scope for this HIP.
+
 ### Technical Requirements
 
 1. **Parser/Matcher**: Implement a `.gitignore`-compatible lexer, parser, and matcher supporting all pattern types above.
@@ -121,17 +117,17 @@ Helm has no concept of staging or committing files. This proposal addresses **fi
 
 4. **Directory short-circuit**: Once a directory is excluded, skip traversing its contents (matches Git's performance optimization).
 
-5. **Self-exclusion**: `.helmignore` MAY be automatically excluded (unlike current behavior per [#9436]).
-
 ### Integration Points
 
-Apply `.gitignore`-parity matching in all chart file operations:
+The new `.gitignore`-parity matching should apply in all existing chart file operations (unchanged scope):
 
 - `helm package`
 - `helm lint`
 - `helm template`
 - `helm install` / `helm upgrade` (for local charts)
 - `.Files.Get` / `.Files.Glob` (file access in templates)
+
+This list is representative; the matching logic applies wherever chart files are loaded or accessed.
 
 ### Gating
 
@@ -156,12 +152,6 @@ Charts opting into v3 accept new `.helmignore` semantics. Potential breaking cha
 | Trailing spaces stripped | Preserved with `\ `        | Unlikely to affect real charts                               |
 | No escape sequences      | `\#`, `\!`, `\ ` supported | No breakage (feature addition)                               |
 
-### Migration Guidance
-
-1. **Test with v3**: Before changing `apiVersion`, test charts with new semantics
-2. **Review negation patterns**: Patterns with `!` may now work as originally intended
-3. **Simplify patterns**: `**` globs can replace verbose directory-specific patterns
-
 ## Security Implications
 
 None. This change only affects which local files are considered during chart operations. It does not:
@@ -177,7 +167,7 @@ None. This change only affects which local files are considered during chart ope
 
 1. **Primary statement**: "Charts v3 `.helmignore` uses identical pattern rules to `.gitignore`."
 
-2. **Link to Git documentation**: Reference [git-scm.com/docs/gitignore][git-gitignore] as the canonical spec.
+2. **Link to Git documentation**: Reference [git-scm.com/docs/gitignore][git-gitignore] as background documentation for the pattern semantics that `.helmignore` follows.
 
 3. **Migration guide**: Document behavior differences between v2 and v3.
 
@@ -187,6 +177,8 @@ None. This change only affects which local files are considered during chart ope
    - Last-match ordering
 
 5. **Improve v2 and v3 documentation**: Existing `.helmignore` documentation is insufficient, leading to end user confusion, so this should be documented as well.
+
+6. **File location**: Clarify that `.helmignore` must be in the chart root directory. Unlike `.gitignore`, nested `.helmignore` files are not loaded. This existing behavior is unchanged.
 
 ### Release Notes
 
@@ -265,11 +257,22 @@ Rejected because partial fixes would leave confusing inconsistencies. Users expe
 
 ### Change behavior for all chart versions
 
-Rejected because it would break existing charts that depend on current (albeit buggy) semantics. Charts v3 provides clean isolation for breaking changes.
+Rejected because it would break existing charts that depend on current (albeit surprising) semantics. Charts v3 provides clean isolation for breaking changes.
 
 ## Open Issues
 
-None.
+### Subchart .helmignore Handling
+
+Should `.helmignore` files in subchart directories (`charts/*/`) be respected when processing an umbrella chart?
+
+**Current behavior**: Only the parent chart's `.helmignore` is loaded; subchart `.helmignore` files are ignored.
+
+**Open question**: Is this intended behavior, a bug, or an oversight? Arguments exist both ways:
+
+- **For respecting**: Chart authors expect their ignore rules to apply
+- **Against (or: may not matter)**: Parent chart may want control; also, helm-ignored files would already be excluded when the subchart was packaged, so they likely won't be present anyway
+
+**Action**: Investigate history (git commits, meeting notes, previous maintainers) and discuss with community before deciding whether to change this behavior. For now, this HIP preserves existing behavior.
 
 ## References
 
