Add reference implementation to HIP-9999
Link to proof-of-concept at github.com/scottrigby/helmignore-ref
which validates go-git's gitignore library as the recommended
implementation approach. Update implementation plan to reference
go-git directly and add library to references section.

Signed-off-by: Scott Rigby <scott@r6by.com>

--- a/hips/hip-9999.md
+++ b/hips/hip-9999.md
@@ -230,18 +230,15 @@ node_modules/
 
 ## Reference Implementation
 
+A proof-of-concept is available at [github.com/scottrigby/helmignore-ref][helmignore-ref], demonstrating that `go-git/go-git/v5/plumbing/format/gitignore` meets all HIP requirements with minimal wrapper code (~76 lines). The repository includes research documentation comparing library options.
+
 Implementation will be gated behind Charts v3 as specified in [HIP-0020][hip-0020]:
 
-1. New matcher package under `internal/chart/v3/ignore/` implementing `.gitignore` semantics
+1. New matcher package under `internal/chart/v3/ignore/` using go-git's gitignore library
 2. Integration with v3 chart loader
-3. Comprehensive test suite covering:
-   - All pattern types from Git documentation
-   - Edge cases from reported issues ([#8688], [#3622], [#1776])
-   - Cross-platform path handling
+3. Test suite covering all pattern types from this specification
 4. Migration tests validating v2 charts remain unchanged
-5. Update `helm create` scaffold for v3 charts (once [PR #31592][pr-31592] merges) to generate a `.helmignore` demonstrating gitignore-parity patterns
-
-Implementation details (library choice, architecture) are intentionally left to implementers. A separate implementation research document will evaluate options including existing Go libraries and FluxCD's `.sourceignore` implementation.
+5. Update `helm create` scaffold for v3 charts (once [PR #31592][pr-31592] merges)
 
 ## Rejected Ideas
 
@@ -286,6 +283,10 @@ Should `.helmignore` files in subchart directories (`charts/*/`) be respected wh
 
 - [git-scm.com/docs/gitignore][git-gitignore]
 
+### Libraries
+
+- [go-git/go-git gitignore][go-git-gitignore] — Recommended implementation library
+
 ### Issues Directly Addressed by This HIP
 
 These issues are resolved by implementing `.gitignore` pattern matching parity:
@@ -325,8 +326,10 @@ These show user confusion that better docs (and gitignore parity) would reduce:
 <!-- Link definitions -->
 
 [hip-0020]: https://github.com/helm/community/blob/main/hips/hip-0020.md
+[helmignore-ref]: https://github.com/scottrigby/helmignore-ref
 [pr-31592]: https://github.com/helm/helm/pull/31592
 [git-gitignore]: https://git-scm.com/docs/gitignore
+[go-git-gitignore]: https://github.com/go-git/go-git/tree/main/plumbing/format/gitignore
 [#8688]: https://github.com/helm/helm/issues/8688
 [#3622]: https://github.com/helm/helm/issues/3622
 [#1776]: https://github.com/helm/helm/issues/1776
