Assign hip-0027 and add to TOC
Signed-off-by: Scott Rigby <scott@r6by.com>

--- a/hips/hip-0027.md
+++ b/hips/hip-0027.md
@@ -1,5 +1,5 @@
 ---
-hip: 9999
+hip: "0027"
 title: "Bring .helmignore to parity with .gitignore file targeting syntax"
 authors: ["Scott Rigby <scott@r6by.com>"]
 created: "2025-12-14"
